--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,6 +19,7 @@
 		%script{type:'text/javascript',src:'/jquery/dist/jquery.min.js'}
 		:css
 			.paragraph { padding-top: 5em; padding-bottom: 20em }
+			.pagination { text-align: center; padding-top: 5em; padding-bottom: 5em }
 			.container { background-color: #fff }
 			form.edit { padding-top: 5em; }
 			ul.nav { padding-top: 0.5em; margin-left: 0; }
