update top page

--- a/views/top.haml
+++ b/views/top.haml
@@ -1,4 +1,3 @@
 .paragraph
 	.container
-		see
-		%a{href:'http://d.hatena.ne.jp/tily/20140921/prgrphs'} how to use prgrphs.tokyo
+		%img{src:'/images/top.jpg'}
